Updated descriptions of Ultimate Stats, and added the respective Stats images in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -769,24 +769,39 @@
 
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col items-center gap-3">
-                        <span>Ultimate Constitution</span>
+                        Ultimate Constitution
                         <img src="./img/constitution_icon.png" alt="">
                     </div></td>
-                    <td>Allows your health to rapidly replenish itself when you are at 70% health or higher.</td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate Heart</td>
-                    <td>Increases the amount of Ki recovered when performing a Ki Pulse.</td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate Courage</td>
-                    <td>Reduces Ki consumption when attacking and greatly weakens the effects of status ailments that slow down 
-                        your Ki recovery.
+                    <td>
+                        Allows your health to rapidly replenish itself by 4.5% per second when you are at 70% health or higher.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate Stamina</td>
-                    <td>Unlocks Rank AA for Agility and Toughness. 13% Melee Ki reduction, 15% Dodge Ki reduction, 7% Ki Recovery
+                    <td><div class="flex flex-col items-center gap-3">
+                        Ultimate Heart
+                        <img src="./img/heart_icon.png" alt="">
+                    </div></td>
+                    <td>
+                        Increases the amount of Ki recovered when performing a Ki Pulse by 60%.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col items-center gap-3">
+                        Ultimate Courage
+                        <img src="./img/courage_icon.png" alt="">
+                    </div></td>
+                    <td>
+                        Reduces Ki consumption when attacking by 20%, and greatly weakens the effects of status ailments that slow down 
+                        your Ki recovery by 50%.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col items-center gap-3">
+                        Ultimate Stamina
+                        <img src="./img/stamina_icon.png" alt="">
+                    </div></td>
+                    <td>
+                        Unlocks Rank AA for Agility and Toughness. 13% Melee Ki reduction, 15% Dodge Ki reduction, 7% Ki Recovery
                         Speed and Dash Ki reduction, Increase in Running Speed for AA Agility.
                         <br><br>
 
@@ -795,27 +810,44 @@
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate Strength</td>
-                    <td>Increases the Active Skill Ki damage you inflict, while also allowing you to recover your Ki with a Ki Pulse by
+                    <td><div class="flex flex-col items-center gap-3">
+                        Ultimate Strength
+                        <img src="./img/strength_icon.png" alt="">
+                    </div></td>
+                    <td>
+                        Increases the Active Skill Ki damage you inflict, while also allowing you to recover your Ki with a Ki Pulse by
                         guarding, even when you are not using a Blessed Weapon. If you are using a Blessed Weapon, the amount of
-                        Ki you recover when guarding will increase.
+                        Ki you recover when guarding will increase. Increases your Ki damage by 6.5%.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate Skill</td>
-                    <td>Ki Pulse: Heaven / Man / Earth will be triggered even when you don't succeed in recovering full Ki via
-                        a Ki Pulse. Extends your invulnerability period when performing a Ki Pulse by dodging.
+                    <td><div class="flex flex-col items-center gap-3">
+                        Ultimate Skill
+                        <img src="./img/skill_icon.png" alt="">
+                    </div></td>
+                    <td>
+                        Ki Pulse: Heaven / Man / Earth will be triggered even when you don't succeed in recovering full Ki via
+                        a Ki Pulse. Extends your invulnerability period when performing a Ki Pulse by dodging by 6 additional 
+                        frames at 60FPS.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate Dexterity</td>
-                    <td>Allows you to have two Ninjutsu Mystic Arts active. This has no effect if you do not have any Mystic Arts
+                    <td><div class="flex flex-col items-center gap-3">
+                        Ultimate Dexterity
+                        <img src="./img/dexterity_icon.png" alt="">
+                    </div></td>
+                    <td>
+                        Allows you to have two Ninjutsu Mystic Arts active. This has no effect if you do not have any Mystic Arts
                         activated.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate Magic</td>
-                    <td>Allows you to have two Onmyo Magic Mystic Arts active. This has no effect if you do not have any Mystic
+                    <td><div class="flex flex-col items-center gap-3">
+                        Ultimate Magic
+                        <img src="./img/magic_icon.png" alt="">
+                    </div></td>
+                    <td>
+                        Allows you to have two Onmyo Magic Mystic Arts active. This has no effect if you do not have any Mystic
                         Arts activated.
                     </td>
                 </tr>
