Updated the scroll icon image's location in picture_scrolls.html. Added lapis_calculation.js, moved from previous project into this current project.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -255,8 +255,10 @@
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Description</h2>
-            <img src="./img/picture_scroll_icon.png" alt="">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <!-- scroll icon -->
+            <img src="./img/picture_scroll_icon.png" alt="">
 
             <!-- ==========
             Demon Parade Picture Scroll Mechanics 
