Added more color rules to tailwind.config.js. Added more content to picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -350,6 +350,16 @@
                     <span><span class="text-red-600 font-bold">Scrolls of the Damned:</span> Underworld Depths (Floors 1 - 30)</span>
                 </div>
             </p>
+
+            <!-- ==========
+            Other Notes
+            ==========-->
+            <h2 class="py-4 text-3xl text-yellow-400 font-extrabold text-center">Other Notes</h2>
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                <span class="text-red-600 font-bold">Special Rules Note:</span> For Lucky Drop [X Grace] all 18 Ethereal Graces can drop, except for
+                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Oyamatsumi</span> and 
+                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Shinatsuhiko</span>.
+            </p>
         </div>
     </section>
 
