Updated the color of the texts for all of the graces in floors.html. Updated text in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -346,7 +346,7 @@
                     <span><span class="text-red-600 font-bold">Demon Parade Picture Scrolls:</span> Dream of the Strong</span>
                     <span><span class="text-red-600 font-bold">Scrolls of the Demon:</span> Dream of the Demon</span>
                     <span><span class="text-red-600 font-bold">Scrolls of the Wise:</span> Dream of the Wise</span>
-                    <span><span class="text-red-600 font-bold">Scrolls of the Nioh:</span> Dream of the Nioh</span>
+                    <span><span class="text-red-600 font-bold">Scrolls of the Nioh:</span> Dream of the Nioh - Underworld (Floors 1 - 108)</span>
                     <span><span class="text-red-600 font-bold">Scrolls of the Damned:</span> Underworld Depths (Floors 1 - 30)</span>
                 </div>
             </p>
