--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -282,7 +282,12 @@
                 <!-- Grace Pool 1 -->
                 <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                     <span class="font-bold text-red-600">If Floor Number / 3 = 0.333: </span>
-                    Acala's Grace, Ame-no-Uzume's Grace, Grace of Kagutsuchi, Izanagi's Grace, Omoikane's Grace, Takeminakata's Grace
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Acala's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ame-no-Uzume's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Izanagi's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Kagutsuchi</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Omoikane's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Takeminakata's Grace</span>
                     <br>
 
                     <span class="font-bold text-red-600">Floors that this Grace pool appears on: </span>
@@ -294,7 +299,12 @@
                 <!-- Grace Pool 2 -->
                 <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                     <span class="font-bold text-red-600">If Floor Number / 3 = .666: </span>
-                    Grace of Amaterasu, Grace of Owatatsumi, Izanami's Grace, Magatsuhi's Grace, Marici's Grace, Ninigi's Grace
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Amaterasu</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Izanami's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Magatsuhi's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Marici's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ninigi's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Owatatsumi</span>
                     <br>
 
                     <span class="font-bold text-red-600">Floors that this Grace pool appears on: </span>
@@ -306,7 +316,12 @@
                 <!-- Grace Pool 3 -->
                 <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                     <span class="font-bold text-red-600">If Floor Number / 3 = .000: </span>
-                    Grace of Futsunushi, Grace of Susano, Grace of Takemikazuchi, Grace of Tsukuyomi, Okoninushi's Grace, Sarutahiko's Grace
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Futsunushi</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Okoninushi's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Sarutahiko's Grace</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Susano</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Takemikazuchi</span>, 
+                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Tsukuyomi</span>
                     <br>
 
                     <span class="font-bold text-red-600">Floors that this Grace pool appears on: </span>
@@ -343,8 +358,14 @@
 
                 <tr class="even:bg-dark-gray-2">
                     <td>1</td>
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Mezuki</a></td>
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep In Kurama</a></td>
+                    <td>
+                        <span class="font-bold">Crucible Boss:</span> 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Mezuki</a><br><br>
+
+                        <span class="font-bold">Netherscape Level:</span><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep In Kurama</a> 
+                    </td>
+                    <td></td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>2</td>
