Added more color themes in tailwind.config.js. Added the Ethereal color text for the Path Stats, and Ultimate Stats in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -775,43 +775,43 @@
                 Header 
                 ========== -->
                 <tr>
-                    <th>Ultimate Attribute</th>
+                    <th class="">Ultimate Attribute</th>
                     <th>Description</th>
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        Ultimate Constitution
-                        <img src="./img/constitution_icon.png" alt="">
-                    </div></td>
+                    <td>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Constitution</span>
+                        <img src="./img/constitution_icon.png" alt="" class="mx-auto mt-3">
+                    </td>
                     <td>
                         Allows your health to rapidly replenish itself by 4.5% per second when you are at 70% health or higher.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        Ultimate Heart
-                        <img src="./img/heart_icon.png" alt="">
-                    </div></td>
+                    <td>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Heart</span>
+                        <img src="./img/heart_icon.png" alt="" class="mx-auto mt-3">
+                    </td>
                     <td>
                         Increases the amount of Ki recovered when performing a Ki Pulse by 60%.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        Ultimate Courage
-                        <img src="./img/courage_icon.png" alt="">
-                    </div></td>
+                    <td>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Courage</span>
+                        <img src="./img/courage_icon.png" alt="" class="mx-auto mt-3">
+                    </td>
                     <td>
                         Reduces Ki consumption when attacking by 20%, and greatly weakens the effects of status ailments that slow down 
                         your Ki recovery by 50%.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        Ultimate Stamina
-                        <img src="./img/stamina_icon.png" alt="">
-                    </div></td>
+                    <td>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Stamina</span>
+                        <img src="./img/stamina_icon.png" alt="" class="mx-auto mt-3">
+                    </td>
                     <td>
                         Unlocks Rank AA for Agility and Toughness. 13% Melee Ki reduction, 15% Dodge Ki reduction, 7% Ki Recovery
                         Speed and Dash Ki reduction, Increase in Running Speed for AA Agility.
@@ -822,10 +822,10 @@
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        Ultimate Strength
-                        <img src="./img/strength_icon.png" alt="">
-                    </div></td>
+                    <td>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Strength</span>
+                        <img src="./img/strength_icon.png" alt="" class="mx-auto mt-3">
+                    </td>
                     <td>
                         Increases the Active Skill Ki damage you inflict, while also allowing you to recover your Ki with a Ki Pulse by
                         guarding, even when you are not using a Blessed Weapon. If you are using a Blessed Weapon, the amount of
@@ -833,10 +833,10 @@
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        Ultimate Skill
-                        <img src="./img/skill_icon.png" alt="">
-                    </div></td>
+                    <td>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Skill</span>
+                        <img src="./img/skill_icon.png" alt="" class="mx-auto mt-3">
+                    </td>
                     <td>
                         Ki Pulse: Heaven / Man / Earth will be triggered even when you don't succeed in recovering full Ki via
                         a Ki Pulse. Extends your invulnerability period when performing a Ki Pulse by dodging by 6 additional 
@@ -844,20 +844,20 @@
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        Ultimate Dexterity
-                        <img src="./img/dexterity_icon.png" alt="">
-                    </div></td>
+                    <td>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Dexterity</span>
+                        <img src="./img/dexterity_icon.png" alt="" class="mx-auto mt-3">
+                    </td>
                     <td>
                         Allows you to have two Ninjutsu Mystic Arts active. This has no effect if you do not have any Mystic Arts
                         activated.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        Ultimate Magic
-                        <img src="./img/magic_icon.png" alt="">
-                    </div></td>
+                    <td>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Magic</span>
+                        <img src="./img/magic_icon.png" alt="" class="mx-auto mt-3">
+                    </td>
                     <td>
                         Allows you to have two Onmyo Magic Mystic Arts active. This has no effect if you do not have any Mystic
                         Arts activated.
@@ -898,37 +898,37 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td>Path of the Avaricious</td>
-                    <td>Greatly increases the loot drop rate in exchange for reducing your maximum health.</td>
+                    <td><span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Path of the Avaricious</span></td>
+                    <td>Greatly increases the loot drop rate in exchange for reducing your maximum health (30%).</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Path of the Beast</td>
-                    <td>Increases the damage and Ki damage dealt by Yokai abilities in exchange for consuming more anima when
-                        using them.
+                    <td><span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Path of the Beast</span></td>
+                    <td>Increases the damage and Ki damage dealt by Yokai abilities by 20% in exchange for consuming more anima when
+                        using them by (20%).
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Path of the Demon</td>
-                    <td>Extends the duration of status enhancements. In exchange, status ailments will also be extended, and can
+                    <td><span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Path of the Demon</span></td>
+                    <td>Extends the duration of status enhancements by 30%. In exchange, status ailments will also be extended by 30%, and can
                         only be removed through the passage of time.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Path of the Gods</td>
-                    <td>Greatly increases the amount of Ki recovered when performing a Ki Pulse. In exchange, your Ki recovery
-                        speed will drop drastically.
+                    <td><span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Path of the Gods</span></td>
+                    <td>Greatly increases the amount of Ki recovered when performing a Ki Pulse (50%). In exchange, your Ki recovery
+                        speed will drop drastically (20%).
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Path of the Ravenous</td>
-                    <td>Greatly recover health whenever you absorb Amrita. In exchange, your rate of earning Amrita will be
-                        decreased.
+                    <td><span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Path of the Ravenous</span></td>
+                    <td>Greatly recover health whenever you absorb Amrita (50 per orb). In exchange, your rate of earning Guage Amrita will be
+                        decreased by 20%.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Path of the Ruthless</td>
-                    <td>Increases damage dealt by melee attacks and speeds up Ki recovery. In exchange, this greatly increases
-                        your damage received.
+                    <td><span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Path of the Ruthless</span></td>
+                    <td>Increases damage dealt by melee attacks by 20%, and speeds up Ki recovery by 20%. In exchange, this greatly increases
+                        your damage received (30%).
                     </td>
                 </tr>
             </table>
