Updated the color of the text in the tables in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -396,35 +396,35 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td>Melee Damage</td>
+                    <td><span class="text-rare-text-color">Melee Damage</span></td>
                     <td>6.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Low Attack Damage</td>
+                    <td><span class="text-rare-text-color">Low Attack Damage</span></td>
                     <td>7.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Mid Attack Damage</td>
+                    <td><span class="text-rare-text-color">Mid Attack Damage</span></td>
                     <td>7.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>High Attack Damage</td>
+                    <td><span class="text-rare-text-color">High Attack Damage</span></td>
                     <td>7.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Quick Attack Damage</td>
+                    <td><span class="text-rare-text-color">Quick Attack Damage</span></td>
                     <td>9.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Strong Attack Damage</td>
+                    <td><span class="text-rare-text-color">Strong Attack Damage</span></td>
                     <td>9.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Active Skill Damage</td>
+                    <td><span class="text-rare-text-color">Active Skill Damage</span></td>
                     <td>8.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ranged Damage</td>
+                    <td><span class="text-rare-text-color">Ranged Damage</span></td>
                     <td>8.0 %</td>
                 </tr>
             </table>
@@ -443,23 +443,23 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td>Melee Ki Damage</td>
+                    <td><span class="text-uncommon-text-color">Melee Ki Damage</span></td>
                     <td>7.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Mid Attack Ki Damage</td>
+                    <td><span class="text-uncommon-text-color">Mid Attack Ki Damage</span></td>
                     <td>5.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>High Attack Ki Damage</td>
+                    <td><span class="text-uncommon-text-color">High Attack Ki Damage</span></td>
                     <td>5.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Strong Attack Ki Damage</td>
+                    <td><span class="text-uncommon-text-color">Strong Attack Ki Damage</span></td>
                     <td>8.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Active Skill Ki Damage</td>
+                    <td><span class="text-uncommon-text-color">Active Skill Ki Damage</span></td>
                     <td>12.0 %</td>
                 </tr>
             </table>
@@ -548,11 +548,11 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ninjutsu Power</td>
+                    <td><span class="text-uncommon-text-color">Ninjutsu Power</span></td>
                     <td>40</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Onmyo Magic Power</td>
+                    <td><span class="text-uncommon-text-color">Onmyo Magic Power</span></td>
                     <td>40</td>
                 </tr>
             </table>
@@ -571,11 +571,11 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td>Untouched Ninjutsu</td>
+                    <td><span class="text-uncommon-text-color">Untouched Ninjutsu</span></td>
                     <td>8.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Untouched Onmyo</td>
+                    <td><span class="text-uncommon-text-color">Untouched Onmyo</span></td>
                     <td>8.0 %</td>
                 </tr>
             </table>
@@ -594,11 +594,11 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td>Damage Bonus (Ninjutsu Power)</td>
+                    <td><span class="text-exotic-text-color">Damage Bonus (Ninjutsu Power)</span></td>
                     <td>B+</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Damage Bonus (Onmyo Magic Power)</td>
+                    <td><span class="text-exotic-text-color">Damage Bonus (Onmyo Magic Power)</span></td>
                     <td>B+</td>
                 </tr>
             </table>
@@ -617,11 +617,11 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td>Counter-Human Tactics</td>
+                    <td><span class="text-divine-text-color">Counter-Human Tactics</span></td>
                     <td>B</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Counter-Yokai Tactics</td>
+                    <td><span class="text-divine-text-color">Counter-Yokai Tactics</span></td>
                     <td>B</td>
                 </tr>
             </table>
@@ -644,11 +644,11 @@
                     <td>10.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ki</td>
+                    <td><span class="text-uncommon-text-color">Ki</span></td>
                     <td>55</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Life</td>
+                    <td><span class="text-uncommon-text-color">Life</span></td>
                     <td>360</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
@@ -656,31 +656,31 @@
                     <td>15</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ki Recovery Speed</td>
+                    <td><span class="text-uncommon-text-color">Ki Recovery Speed</span></td>
                     <td>8.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Luck</td>
+                    <td><span class="text-uncommon-text-color">Luck</span></td>
                     <td>40</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Equipment Drop Rate</td>
+                    <td><span class="text-uncommon-text-color">Equipment Drop Rate</span></td>
                     <td>7.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Item Drop Rate</td>
+                    <td><span class="text-uncommon-text-color">Item Drop Rate</span></td>
                     <td>7.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ethereal Drop Rate</td>
+                    <td><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ethereal Drop Rate</span></td>
                     <td>A+</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Anima Charge</td>
+                    <td><span class="text-uncommon-text-color">Anima Charge</span></td>
                     <td>6.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Sentience Charge</td>
+                    <td><span class="text-uncommon-text-color">Sentience Charge</span></td>
                     <td>100.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
@@ -688,7 +688,7 @@
                     <td>10.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Extend Yokai Shift</td>
+                    <td><span class="text-uncommon-text-color">Extend Yokai Shift</span></td>
                     <td>8.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
@@ -696,7 +696,7 @@
                     <td>-3.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Elemental Damage</td>
+                    <td><span class="text-rare-text-color">Elemental Damage</span></td>
                     <td>7.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
@@ -704,43 +704,43 @@
                     <td>-10.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Elemental Damage Taken (Guarding)</td>
+                    <td><span class="text-exotic-text-color">Elemental Damage Taken (Guarding)</span></td>
                     <td>-15.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ailment Affliction Duration</td>
+                    <td><span class="text-rare-text-color">Ailment Affliction Duration</span></td>
                     <td>-25.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Life Drain (Melee Kill)</td>
+                    <td><span class="text-exotic-text-color">Life Drain (Melee Kill)</span></td>
                     <td>360</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Increased Attack (Winded Enemy)</td>
+                    <td><span class="text-rare-text-color">Increased Attack (Winded Enemy)</span></td>
                     <td>-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Extend Dodge Invulnerability</td>
+                    <td><span class="text-uncommon-text-color">Extend Dodge Invulnerability</span></td>
                     <td>-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate [STAT]</td>
+                    <td><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate [STAT]</span></td>
                     <td>-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Mysitc Dyad [WEAPON]</td>
+                    <td><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Mysitc Dyad [WEAPON]</span></td>
                     <td>-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Extend Curse Nullification</td>
+                    <td><span class="text-exotic-text-color">Extend Curse Nullification</span></td>
                     <td>40.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Finishing Flair</td>
+                    <td><span class="text-divine-text-color">Finishing Flair</span></td>
                     <td>B</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Rarity Inheritance (Scroll Transference)</td>
+                    <td><span class="text-divine-text-color">Rarity Inheritance (Scroll Transference)</span></td>
                     <td>-</td>
                 </tr>
             </table>
